--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,9 @@
-
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(114, 165, 80);
+    color: rgb(0, 0, 0);
+    text-align: center;
+  }
