--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,12 @@ body {
     /* background-color: #6eadff; */
   }
 
+  h1 {
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: center;
+    font-size: 50px;
+  }
+
   .btn {
     background-color: rgb(255, 255, 255);
     border: none;
@@ -11,6 +17,7 @@ body {
     margin: 20px 0px 20px 0px;
     /* margin-right: 20px; */
     font-size: 35px;
+    text-align: center;
     cursor: pointer;
   }
   
