--- a/assets/style.css
+++ b/assets/style.css
@@ -14,8 +14,7 @@ body {
     border: none;
     color: black;
     padding: 12px 16px;
-    margin: 20px 0px 20px 0px;
-    /* margin-right: 20px; */
+    margin: 0px 10px 0px 10px;
     font-size: 35px;
     text-align: center;
     cursor: pointer;
@@ -25,3 +24,30 @@ body {
   .btn:hover {
     background-color: RoyalBlue;
   }
+
+  /* ---------------------------------MEDIA RESPONSIVE QUERIES------------------------------------- */
+
+  /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .btn {
+    float: none;
+    width: 100%;
+    margin: 20px 0px 20px 0px;
+    overflow: visible;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    text-align: center;
+    font-size: auto;
+  }
+}
+
+/* @media screen and (max-width: 600px) {
+  body {
+    float: none;
+    width: 100%;
+    
+  }
+} */
