--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,16 @@ body {
     text-align: center;
     font-size: auto;
     font-size: 24px;
+    width: 100%;
+
+  }
+
+  h3{
+    text-align: center;
+    font-size: auto;
+    font-size: 20px;
+    width: 100%;
+
   }
 }
 
